# dependency-info

./: .bandit  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: main.yml
src/depinfo/: __init__.py  _version.py  domain.py  info.py
src/depinfo/application/: __init__.py  abstract_display_service.py  cli.py  compatibility.py  display_application.py  display_format.py  display_service_registry.py  display_type.py
src/depinfo/domain/: __init__.py  dependency_report.py  package.py  platform.py  python.py
src/depinfo/infrastructure/: __init__.py
src/depinfo/infrastructure/application/: __init__.py  cli.py  display_service_factory.py  display_service_registry.py  markdown_table_display_service.py  simple_display_service.py
tests/: test_info.py
tests/integration/: test_cli.py  test_compatibility.py
tests/unit/domain/: test_dependency_report.py  test_package.py  test_platform.py  test_python.py
