[metadata]
name = depinfo
url = https://github.com/Midnighter/dependency-info
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = Apache Software License Version 2.0
description = List a package's direct dependencies and their versions.
long_description = file: README.rst
keywords =
    dependency
    dependencies
    tree
    version

[options]
zip_safe = True
install_requires =
    pipdeptree >= 0.13.2
python_requires = >=2.7,!=3.1.*,!=3.2.*,!=3.3.*
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/depinfo/_version.py
versionfile_build = depinfo/_version.py
tag_prefix =
parentdir_prefix = depinfo-
