[metadata]
name = depinfo
url = https://github.com/Midnighter/dependency-info
download_url = https://pypi.org/project/depinfo/
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = Apache-2.0
description = List a package's direct dependencies and their versions.
long_description = file: README.rst
keywords =
    dependency
    dependencies
    tree
    version

[options]
zip_safe = True
install_requires =
    pipdeptree >= 0.13.2
python_requires = >=3.5.*
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/depinfo/_version.py
versionfile_build = depinfo/_version.py
tag_prefix =
parentdir_prefix = depinfo-
