[metadata]
name = depinfo
url = https://github.com/Midnighter/dependency-info
download_url = https://pypi.org/project/depinfo/
project_urls =
    Source Code = https://github.com/Midnighter/dependency-info
    Bug Tracker = https://github.com/Midnighter/dependency-info/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
license = Apache-2.0
description = List any package's direct dependencies and their versions.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    dependency
    dependencies
    tree
    version

[options]
zip_safe = True
install_requires =
    importlib_metadata; python_version <'3.8'
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/depinfo/_version.py
versionfile_build = depinfo/_version.py
tag_prefix =
parentdir_prefix = depinfo-
